tests/declaration_files_incremental_haste_name_reducers/declaration_files_incremental_haste_name_reducers.exp
======Start off with the .js files but without the .flow file======
Error ------------------------------------------------------------- index.js:4:2

Cannot cast `A.foo()` to boolean because `AImplementation` is incompatible with
boolean.

Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `AImplementation` [1] is incompatible with boolean [2].
  References:
    4: export function foo(): AImplementation { return new AImplementation(); }
                              ^^^^^^^^^^^^^^^ [1]: `AImplementation`. See: A.js:4
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------- index.js:7:2

Cannot cast `test.foo()` to boolean because `TestImplementation` is incompatible
with boolean.

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestImplementation` [1] is incompatible with boolean [2].
  References:
    2: export function foo(): TestImplementation { return new TestImplementation(); }
                              ^^^^^^^^^^^^^^^^^^ [1]: `TestImplementation`. See: node_modules/test/Test.js:2
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
Error ------------------------------------------------------------- index.js:4:2

Cannot cast `A.foo()` to boolean because `ADefinition` is incompatible with
boolean.

Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `ADefinition` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): ADefinition;
                                      ^^^^^^^^^^^ [1]: `ADefinition`. See: A.js.flow:2
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------- index.js:7:2

Cannot cast `test.foo()` to boolean because `TestDefinition` is incompatible
with boolean.

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestDefinition` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): TestDefinition;
                                      ^^^^^^^^^^^^^^ [1]: `TestDefinition`. See: node_modules/test/Test.js.flow:2
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
Error ------------------------------------------------------------- index.js:4:2

Cannot cast `A.foo()` to boolean because `AImplementation` is incompatible with
boolean.

Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `AImplementation` [1] is incompatible with boolean [2].
  References:
    4: export function foo(): AImplementation { return new AImplementation(); }
                              ^^^^^^^^^^^^^^^ [1]: `AImplementation`. See: A.js:4
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------- index.js:7:2

Cannot cast `test.foo()` to boolean because `TestImplementation` is incompatible
with boolean.

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestImplementation` [1] is incompatible with boolean [2].
  References:
    2: export function foo(): TestImplementation { return new TestImplementation(); }
                              ^^^^^^^^^^^^^^^^^^ [1]: `TestImplementation`. See: node_modules/test/Test.js:2
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors


======Start off with the .js files and the .flow file======
Error ------------------------------------------------------------- index.js:4:2

Cannot cast `A.foo()` to boolean because `ADefinition` is incompatible with
boolean.

Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `ADefinition` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): ADefinition;
                                      ^^^^^^^^^^^ [1]: `ADefinition`. See: A.js.flow:2
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------- index.js:7:2

Cannot cast `test.foo()` to boolean because `TestDefinition` is incompatible
with boolean.

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestDefinition` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): TestDefinition;
                                      ^^^^^^^^^^^^^^ [1]: `TestDefinition`. See: node_modules/test/Test.js.flow:2
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
Error ------------------------------------------------------------- index.js:4:2

Cannot cast `A.foo()` to boolean because `AImplementation` is incompatible with
boolean.

Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `AImplementation` [1] is incompatible with boolean [2].
  References:
    4: export function foo(): AImplementation { return new AImplementation(); }
                              ^^^^^^^^^^^^^^^ [1]: `AImplementation`. See: A.js:4
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------- index.js:7:2

Cannot cast `test.foo()` to boolean because `TestImplementation` is incompatible
with boolean.

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestImplementation` [1] is incompatible with boolean [2].
  References:
    2: export function foo(): TestImplementation { return new TestImplementation(); }
                              ^^^^^^^^^^^^^^^^^^ [1]: `TestImplementation`. See: node_modules/test/Test.js:2
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
Error ------------------------------------------------------------- index.js:4:2

Cannot cast `A.foo()` to boolean because `ADefinition` is incompatible with
boolean.

Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `ADefinition` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): ADefinition;
                                      ^^^^^^^^^^^ [1]: `ADefinition`. See: A.js.flow:2
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------- index.js:7:2

Cannot cast `test.foo()` to boolean because `TestDefinition` is incompatible
with boolean.

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestDefinition` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): TestDefinition;
                                      ^^^^^^^^^^^^^^ [1]: `TestDefinition`. See: node_modules/test/Test.js.flow:2
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors


======Start off without the .js files and with the .flow file======
Error ------------------------------------------------------------- index.js:4:2

Cannot cast `A.foo()` to boolean because `ADefinition` is incompatible with
boolean.

Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `ADefinition` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): ADefinition;
                                      ^^^^^^^^^^^ [1]: `ADefinition`. See: A.js.flow:2
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------- index.js:7:2

Cannot cast `test.foo()` to boolean because `TestDefinition` is incompatible
with boolean.

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestDefinition` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): TestDefinition;
                                      ^^^^^^^^^^^^^^ [1]: `TestDefinition`. See: node_modules/test/Test.js.flow:2
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
Error ------------------------------------------------------------- index.js:4:2

Cannot cast `A.foo()` to boolean because `ADefinition` is incompatible with
boolean.

Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `ADefinition` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): ADefinition;
                                      ^^^^^^^^^^^ [1]: `ADefinition`. See: A.js.flow:2
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------- index.js:7:2

Cannot cast `test.foo()` to boolean because `TestDefinition` is incompatible
with boolean.

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestDefinition` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): TestDefinition;
                                      ^^^^^^^^^^^^^^ [1]: `TestDefinition`. See: node_modules/test/Test.js.flow:2
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
Error ------------------------------------------------------------- index.js:4:2

Cannot cast `A.foo()` to boolean because `ADefinition` is incompatible with
boolean.

Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `ADefinition` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): ADefinition;
                                      ^^^^^^^^^^^ [1]: `ADefinition`. See: A.js.flow:2
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------- index.js:7:2

Cannot cast `test.foo()` to boolean because `TestDefinition` is incompatible
with boolean.

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestDefinition` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): TestDefinition;
                                      ^^^^^^^^^^^^^^ [1]: `TestDefinition`. See: node_modules/test/Test.js.flow:2
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
